# IRST_LIBRARY

./: .bandit  .coveragerc  .dockerignore  .editorconfig  .env.template  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  GOVERNANCE.md  INSTALL.md  LICENSE  MANIFEST.in  Makefile  NEW_README.md  README.md  RESEARCH_MODULES_COMPLETE.md  ROADMAP.md  SECURITY.md  TRANSFORMATION_COMPLETE.md  TRANSFORMATION_SUMMARY.md  deploy.sh  docker-compose.yml  logging.yaml  mlops.yaml  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.sh  setup.py  validate_transformation.py  validation_report.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmarks.yml  ci.yml  release.yml  security.yml
benchmarks/: .gitkeep
config/: experiment.yaml
configs/experiments/: acm_nuaa_sirst.yaml  mshnet_sirst.yaml  serank_sirst.yaml
docs/: ADVANCED_FEATURES.md  ARCHITECTURE.md  BENCHMARKS.md  FAQ.md  REFERENCES.md  api_reference.md  datasets.md  models.md  quickstart.md
examples/: README.md  inference.py  train_model.py
irst_library/: __init__.py
irst_library/cli/: __init__.py
irst_library/core/: __init__.py  base.py  detector.py  registry.py
irst_library/datasets/: __init__.py  nuaa_sirst.py  sirst.py
irst_library/edge/: __init__.py
irst_library/mlops/: __init__.py
irst_library/models/: __init__.py
irst_library/models/single_frame/: __init__.py  acm.py  mshnet.py  serank.py
irst_library/research/: __init__.py  active_learning.py  adversarial_robustness.py  continual_learning.py  domain_adaptation.py  explainability.py  meta_learning.py  nas.py  physics_informed.py  quantum_neural.py  ssl.py  synthetic_data.py
irst_library/training/: __init__.py  callbacks.py  losses.py  metrics.py  trainer.py
irst_library/utils/: __init__.py  image.py  visualization.py
irst_library/video/: __init__.py
k8s/: deployment.yaml  ingress.yaml  monitoring.yaml
logs/: .gitkeep
notebooks/: README.md  advanced_research_tutorial.ipynb  benchmarking_tutorial.ipynb  complete_workflow.ipynb  dataset_preparation.ipynb  deployment_tutorial.ipynb  irst_tutorial.ipynb  model_zoo_tutorial.ipynb  training_advanced.ipynb
scripts/: benchmark.py  check_performance_regression.py  generate_docs.py  quality_check.py  setup_dev.py  validate_model.py
security/: SECURITY_FRAMEWORK.md
templates/: model_template.py
tests/: conftest.py
tests/performance/: test_benchmarks.py
tests/unit/: test_core.py  test_models.py
web_ui/: README.md
